Updated modules CCK, Views 2, Pathauto, Token and Internationalization to versions 6.x-2.7, 6.x-2.11, 6.x-1.3, 6.x-1.3 and 6.x-1.5

--- a/trunk/core/www/sites/default/modules/i18n/CHANGELOG.txt
+++ b/trunk/core/www/sites/default/modules/i18n/CHANGELOG.txt
@@ -1,4 +1,27 @@
-// $Id: CHANGELOG.txt,v 1.15.4.81 2010/04/07 19:45:52 jareyero Exp $
+// $Id: CHANGELOG.txt,v 1.15.4.93 2010/06/10 11:56:24 jareyero Exp $
+
+6.x-1.4 to 6.x-1.5
+------------------
+- Fixed: taxonomy name/help not translated, by miro_dietiker, #686896
+- Disabled language selection when editing menu items, by swentel, #694680
+- Reworked variable initialization to fox static cache issues with Drupal 6.17 (drupal_is_front_page), #817164
+- Fixed l10n_client support, added missing strings for translation, by miro_dietiker, khaled.zaidan, #304434
+- Fixed duplicates in locales source, by Dippers, #782036
+- Fixed warning during update script (possibly ids are the same), #783978
+- Fixed maxlength, for node translation autocomplete, by cedrid, #802418
+- Fixed i18n_init not run early enough, inconsistent menu items, #614548
+- Fixed wrong data type in query for i18n_blocks (pgsql), by jmpoure, #709272
+- Added i18nstrings_string() for 'plain strings', don't do unneeded filtering.
+- Fixed: Make menu title translatable (blocks), by moritzz, #356375
+- Moved i18nviews module to new project,http://drupal.org/project/i18nviews, #788290
+- Fixed: errors when taxonomy not set, #743492
+- Fixed update issues, for i18nstrings, #79644
+- New feature: Optionally translate default language in tt(), by miro_dietiker and markus_petrux, #676002
+- Moved i18n_test module to "Testing" package, #799730
+- Fixed: The "All languages" option can't save back on blocks, #766678
+- Marked obsolete functions tt() and to(). Replaced by i18nstrings() and i18nstrings_update()
+- Restore back function tt() to prevent "Fatal error: Call to undefined function tt()" in other modules, by markus_petrux, #358839
+- Added support for optional default language translation, by Miro Dietiker, #676002
 
 6.x-1.3 to 6.x-1.4
 ------------------
